--- a/BreakOutBox/Views/Spel/Feedback.cshtml
+++ b/BreakOutBox/Views/Spel/Feedback.cshtml
@@ -17,11 +17,20 @@
 
 <h2>Feedback</h2>
 
-<h3>Je bent geblokkeerd. Te veel foute pogingen.</h3>
+<h3>Uitleg over de opdracht.</h3>
+<p>State: @TempData["State"]</p>
+
+
 
 @if (Convert.ToInt32(TempData["State"]) == 3 || Convert.ToInt32(TempData["State"]) == 2)
 {
+    <p>Je bent gedeblokkeerd, je kunt terug opnieuw proberen.</p>
     <button type="submit" asp-controller="Spel" asp-action="Opnieuw" asp-route-sessiecode="@Model.Sessie.Code" asp-route-groepid="@Model.Groep.GroepId">Keer terug naar spel.</button>
+}
+else
+{
+    <p>Je bent geblokkeerd. Te veel foute pogingen.</p>
+
 }
 
 <object height="750" type="application/pdf" data="~/algemenepdfs/Theorie.pdf"></object>
