--- a/BreakOutBox/Views/Spel/SpelSpelen.cshtml
+++ b/BreakOutBox/Views/Spel/SpelSpelen.cshtml
@@ -1,33 +1,23 @@
 ﻿@model BreakOutBox.Models.SpelViewModels.SpelSpelenViewModel
 @{
-
     var progressie = Model.ProgressieInPad;
-
     //var progressiePercentage = ((((decimal)progressie[1] + 1) / ((decimal)progressie[0])) * 100);
     //var progressiePercentageCompleted = (int)(System.Math.Round(progressiePercentage, 0) - ((decimal)100 / progressie[0]));
 }
-<meta name="viewport" content="width=device-width, initial-scale=1">
-@*<meta http-equiv="refresh" content="15">*@
 
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<head>
+@section Head {
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
-    <style>
-        .container {
-        }
-    </style>
-</head>
+}
 
 <body>
     <form method="post" id="formAntwoord" name="formAntwoord">
-
-
         <div style="text-align:center;">
             <div style="float:left;">
                 <h2 style="text-decoration:underline"> @Model.Opdracht.Oefening.Naam </h2>
-
                 <h4 style="text-decoration: underline">@(Model.Opdracht.Oefening.Vak.Naam)</h4>
                 <p>
                     <h5>Progressie: Opdracht @(progressie[1] + 1) van de @(progressie[0]).</h5>
@@ -40,145 +30,30 @@
                 <p>Foute pogingen @Model.Opdracht.foutePogingen</p>
                 @if (Model.Opdracht.foutePogingen < 3)
                 {
-
-                    
                     <p><input id="Toegangscode" asp-for="Groepsantwoord" type="text" class="form-control" autocomplete="off" value="" /></p>
                     <p><span asp-validation-for="Groepsantwoord" class="text-danger" id="foutTeksvakLeeg"></span></p>
-
                     <button type="submit" class="" id="GaVerder">Ga verder</button>
-            
                     <p style="color:red">@TempData["FouteCode"]</p>
                 }
                 else
                 {
-
                     <button type="submit" style="font-size:22px" onClick="window.location.reload()"> <i class="fa">&#xf021;</i></button>
                     <button type="button" id="Feedback" onclick="hulp()">Feeback</button>
                     <button type="submit" style="font-size:22px" asp-controller="Spel" asp-action="Opnieuw" asp-route-sessiecode="@Model.SessieCode" asp-route-groepid="@Model.GroepId"> <i class="fa">&#xf021;</i></button>
                     @*<input type="image" src="" name="saveForm" class="fa fa-refresh btTxt submit" id="saveForm" value="Refresh Page" onClick="window.location.reload()" />*@
                 }
-
-
             </div>
-
-
         </div>
-
-
-
-        @*//--------------------------------------------*@
-
-
-
         <div style="float:right;width: 55%">
-
             <object height="750" type="application/pdf" data="~/opdrachtenG1/@Model.Opdracht.Oefening.Opgave" id="pdf_content"></object>
-
         </div>
-
         <div style="clear:both"></div>
     </form>
 </body>
 
-<div>
-    @*<div class="row">
-        <div class="sm-12 col text-center">
-            <h2 style="text-decoration:underline">
-                @Model.Opdracht.Oefening.Naam </ h2 >
-                < form method="post" id="formAntwoord" name="formAntwoord">
-                <p><h4 style="text-decoration: underline">@(Model.Opdracht.Oefening.Vak.Naam)</h4></p>
-                <p>
-                    <h5>opdracht @(progressie[1] + 1) van de @(progressie[0])</h5>
-                </p>
-                <p>
-                    Groepsbewerking: @(Model.Opdracht.Oefening.Groepsbewerking.ToString())
-                </p>
-
-                @*<p>
-                        <div class="w3-container" onclick="">
-                            <div class="w3-light-grey" style="width:60%;margin: auto;">
-                                <div class="w3-container w3-blue w3-center" style="width:@((int)progressiePercentageCompleted)%"><span style = "color:black" >@((int)(progressiePercentageCompleted))%&nbsp;correct&nbsp;opgelost</span></div>
-                            </div>
-                        </div>
-                    </p>*@
-
-    @*<div>
-        <div id="pdf">
-            < object height="750" type="application/pdf" data="~/opdrachtenG1/@Model.Opdracht.Oefening.Opgave" id="pdf_content"></object>*@
-    @*<object height = "750" type="application/pdf" data="~/algemenepdfs/Theorie.pdf" id="pdf_hulp" style="display:none"></object>*@
-
-    @*</div>
-        </div>
-        <div id="Antwoord">
-
-            <p><label asp-for="Groepsantwoord"></label></p>
-            <p><input id="Toegangscode" asp-for="Groepsantwoord" type="text" class="form-control" autocomplete="off" value="" /></p>
-            <p><span asp-validation-for="Groepsantwoord" class="text-danger" id="foutTeksvakLeeg"></span></p>
-
-            <p>@TempData["FouteCode"]</p>
-            @*<p><a asp-controller="Sessie" asp-action="SessieOverzicht" asp-route-id="@Model.SessieCode" class="btn btn-default">Ga verder</a></p>*@
-
-    @*<button type="submit" class="" id="GaVerder">Ga verder</button>
-        }
-        //else
-        //{
-        //<button type="submit" style="font-size:22px" onClick="window.location.reload()"> <i class="fa">&#xf021;</i></button>
-        //<button type="button" id="Feedback" onclick="hulp()">Feeback</button>
-        //<button type="submit" style="font-size:22px" asp-controller="Spel" asp-action="Opnieuw" asp-route-sessiecode="@Model.SessieCode" asp-route-groepid="@Model.GroepId"> <i class="fa">&#xf021;</i></button>*@
-    @*<input type = "image" src="" name="saveForm" class="fa fa-refresh btTxt submit" id="saveForm" value="Refresh Page" onClick="window.location.reload()" />*@
-
-
-    @*}
-
-        </div>*@
-
-
-
-    @*<div id = "Opnieuw" style="display:none">
-                        @if(Model.Groep.Pad.getCurrentOpdracht().foutePogingen == 3)
-        {
-                            < p > Te veel foute antwoorden, vraag hulp aan de leerkracht.</ p >
-
-                               < button onclick = "hulp()" type = "button" > Hulp nodig ?</ button >
-
-                                      @if(Model.Groep.State == 3)
-                            {
-                                < p > Je bent geblokkeerd.</ p >
-
-                                   < button type = "submit" asp - controller = "Spel" asp - action = "Opnieuw" asp - route - sessiecode = "@Model.Sessie.Code" asp - route - groepid = "@Model.Groep.GroepId" > Probeer opnieuw.</ button >
-                            }
-                            else
-                            {
-                                @*button om terug te gaan naar het overzicht als de groep geblokkeerd is *@
-    @*< button type = "submit" asp - controller = "Spel" asp - action = "SpelSpelen" asp - route - sessiecode = "@Model.Sessie.Code" > Probeer opnieuw.</ button >
-                                }
-        }
-
-
-                        </div>*@
-
-
-    @*<div hidden>
-
-                        <p><input asp-for="GroepId" type="text" class="form-control" autocomplete="off" value="@(Model.GroepId)" /></p>
-                        <p><input asp-for="JuistGeantwoordtoegangscodeString" type="text" class="form-control" autocomplete="off" value="" id="JuistGeantwoordtoegangscodeStringId" /></p>
-                        <p><input asp-for="JuistGeantwoordOpgaveString" type="text" class="form-control" autocomplete="off" value="" id="JuistGeantwoordOpgaveStringId" /></p>
-
-                    </div>
-
-                    </form>
-            </div>
-        </div>*@
-</div>
-
-
-
-
-
-@section scripts {
+@section Scripts {
     <script asp-src-include="lib/jquery-validation/dist/jquery.validate.js"></script>
     <script asp-src-include="lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
-
 
     <script>
         console.log("Antwoord " + @(Model.Opdracht.Oefening.Antwoord.ToString()));
@@ -194,7 +69,6 @@
 
         if ("@(Model.JuistGeantwoordOpgave)" == "True") {
             document.getElementById("Toegangscode").value = (@(Model.Opdracht.Oefening.AntwoordMetGroepsbewerking().ToString()));
-
             document.getElementById("JuistGeantwoordtoegangscodeStringId").value = "True";
 
             if (@TempData["State"] !=3 && @TempData["State"] !=2) {
@@ -265,14 +139,10 @@
                 function () {
                     window.location.href = "http://example.com/new_url";
                 });
-
                 console.log("Gelukt");
-
         }
 
         function geblokkeerd() {
-
-
             swal({
                 title: "Geblokkeerd",
                 type: "Warning",
@@ -281,34 +151,26 @@
                 confirmButtonText: "Refresh",
                 animation: "slide-from-top",
             },
-                function () {
-                    window.location.reload();
-
-                });
-
-
+            function () {
+                window.location.reload();
+            });
         }
-
 
     function delaySubmit() {
         document.getElementById("formAntwoord").submit();
     }
-
     </script>
     <script>
         @*console.log("Antwoord " + @Model.Opdracht.Oefening.Antwoord.ToString());
         console.log("Toegangscode " +@(Model.Groep.Pad.getNextOpdracht(Model.Opdracht).Toegangscode.Code.ToString()));
         console.log("progressie% completed " + @((int)progressiePercentageCompleted));*@
     </script>
-
 }
 
 <div hidden>
-
     <p><input asp-for="GroepId" type="text" class="form-control" autocomplete="off" value="@(Model.GroepId)" /></p>
     <p><input asp-for="JuistGeantwoordtoegangscodeString" type="text" class="form-control" autocomplete="off" value="" id="JuistGeantwoordtoegangscodeStringId" /></p>
     <p><input asp-for="JuistGeantwoordOpgaveString" type="text" class="form-control" autocomplete="off" value="" id="JuistGeantwoordOpgaveStringId" /></p>
-
 </div>
 
 
