--- a/BreakOutBox/Views/Spel/Feedback.cshtml
+++ b/BreakOutBox/Views/Spel/Feedback.cshtml
@@ -2,26 +2,18 @@
 @{
     ViewData["Title"] = "Feedback";
 }
-<meta http-equiv="refresh" content="15">
 
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<head>
+@section Head {
+    <meta http-equiv="refresh" content="15">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
-    <style>
-        .container {
-        }
-    </style>
-</head>
+}
 
 <h2>Feedback</h2>
-
 <h3>Uitleg over de opdracht.</h3>
 <p>State: @TempData["State"]</p>
-
-
-
 @if (Convert.ToInt32(TempData["State"]) == 3 || Convert.ToInt32(TempData["State"]) == 2)
 {
     <p>Je bent gedeblokkeerd, je kunt terug opnieuw proberen.</p>
@@ -30,9 +22,5 @@
 else
 {
     <p>Je bent geblokkeerd. Te veel foute pogingen.</p>
-
 }
-
 <object height="750" type="application/pdf" data="~/algemenepdfs/Theorie.pdf"></object>
-
-
