--- a/BreakOutBox/Views/Spel/SpelSpelen.cshtml
+++ b/BreakOutBox/Views/Spel/SpelSpelen.cshtml
@@ -3,6 +3,7 @@
     var progressie = Model.ProgressieInPad;
     //var progressiePercentage = ((((decimal)progressie[1] + 1) / ((decimal)progressie[0])) * 100);
     //var progressiePercentageCompleted = (int)(System.Math.Round(progressiePercentage, 0) - ((decimal)100 / progressie[0]));
+    ViewData["Title"] = "Opdracht " + (progressie[1] + 1).ToString();
 }
 
 @section Head {
@@ -28,6 +29,7 @@
                 </p>
                 <p><label asp-for="Groepsantwoord"></label></p>
                 <p>Foute pogingen @Model.Opdracht.foutePogingen</p>
+                <p>State: @TempData["State"]</p>
                 @if (Model.Opdracht.foutePogingen < 3)
                 {
                     <p><input id="Toegangscode" asp-for="Groepsantwoord" type="text" class="form-control" autocomplete="off" value="" /></p>
@@ -40,7 +42,7 @@
                     <button type="submit" style="font-size:22px" onClick="window.location.reload()"> <i class="fa">&#xf021;</i></button>
                     <button type="button" id="Feedback" onclick="hulp()">Feeback</button>
                     <button type="submit" style="font-size:22px" asp-controller="Spel" asp-action="Opnieuw" asp-route-sessiecode="@Model.SessieCode" asp-route-groepid="@Model.GroepId"> <i class="fa">&#xf021;</i></button>
-                    @*<input type="image" src="" name="saveForm" class="fa fa-refresh btTxt submit" id="saveForm" value="Refresh Page" onClick="window.location.reload()" />*@
+                    <input type="image" src="" name="saveForm" class="fa fa-refresh btTxt submit" id="saveForm" value="Refresh Page" onClick="window.location.reload()" />
                 }
             </div>
         </div>
