--- a/BreakOutBox/Views/Spel/SpelSpelen.cshtml
+++ b/BreakOutBox/Views/Spel/SpelSpelen.cshtml
@@ -27,23 +27,13 @@
                 <p>
                     Stap2: Voer deze groepsbewerking uit <br /> op het antwoord.  <br /> Groepsbewerking: @(Model.Opdracht.Oefening.Groepsbewerking.ToString()).
                 </p>
+                @*<p>@TempData["State"]</p>
+                <p>teller @Model.Opdracht.foutePogingen</p>*@
                 <p><label asp-for="Groepsantwoord"></label></p>
-                <p>Foute pogingen @Model.Opdracht.foutePogingen</p>
-                <p>State: @TempData["State"]</p>
-                @if (Model.Opdracht.foutePogingen < 3)
-                {
-                    <p><input id="Toegangscode" asp-for="Groepsantwoord" type="text" class="form-control" autocomplete="off" value="" /></p>
-                    <p><span asp-validation-for="Groepsantwoord" class="text-danger" id="foutTeksvakLeeg"></span></p>
-                    <button type="submit" class="" id="GaVerder">Geef antwoord in</button>
-                    <p style="color:red">@TempData["FouteCode"]</p>
-                }
-                else
-                {
-                    <button type="submit" style="font-size:22px" onClick="window.location.reload()"> <i class="fa">&#xf021;</i></button>
-                    <button type="button" id="Feedback" onclick="hulp()">Feeback</button>
-                    <button type="submit" style="font-size:22px" asp-controller="Spel" asp-action="Opnieuw" asp-route-sessiecode="@Model.SessieCode" asp-route-groepid="@Model.GroepId"> <i class="fa">&#xf021;</i></button>
-                    @*<input type="image" src="" name="saveForm" class="fa fa-refresh btTxt submit" id="saveForm" value="Refresh Page" onClick="window.location.reload()" />*@
-                }
+                <p><input id="Toegangscode" asp-for="Groepsantwoord" type="text" class="form-control" autocomplete="off" value="" /></p>
+                <p><span asp-validation-for="Groepsantwoord" class="text-danger" id="foutTeksvakLeeg"></span></p>
+                <button type="submit" class="" id="GaVerder">Geef antwoord in</button>
+                <p style="color:red">@TempData["FouteCode"]</p>
             </div>
         </div>
         <div style="float:right;width: 55%">
