--- a/BreakOutBox/Views/Spel/Feedback.cshtml
+++ b/BreakOutBox/Views/Spel/Feedback.cshtml
@@ -14,11 +14,11 @@
 <h2>Feedback</h2>
 <h3>Uitleg over de opdracht.</h3>
 @*<p>State: @TempData["State"]</p>*@
-@if (Convert.ToInt32(TempData["State"]) == 1)
+@if (Convert.ToInt32(TempData["State"]) != 1) // Moet op == 1 staan (!= 1 is voor testen)
 {
     <p>Je bent gedeblokkeerd, je kunt terug opnieuw proberen.</p>
-    <form>
-        <button type="submit" asp-controller="Spel" asp-action="SpelSpelen">Keer terug naar spel.</button>
+    <form asp-action="TerugNaarOefening">
+        <button type="submit">Keer terug naar spel.</button>
     </form>
 }
 else
