--- a/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
+++ b/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
@@ -60,7 +60,8 @@
                     @groep.GetState().Beschrijving
                 </td>
                 <td>
-                    Vraag @*@groep.Voortgang*@ van de @groep.Pad.Opdrachten.Count
+                  
+                    Vraag @groep.Pad.getProgressie()[1] van de @groep.Pad.getProgressie()[0]
                 </td>
                 <td>
                     <ul>
