--- a/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
+++ b/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
@@ -60,8 +60,7 @@
                     @groep.GetState().Beschrijving
                 </td>
                 <td>
-                  
-                    Vraag @groep.Pad.getProgressie()[1] van de @groep.Pad.getProgressie()[0]
+                    Vraag @*@groep.Voortgang*@ van de @groep.Pad.Opdrachten.Count
                 </td>
                 <td>
                     <ul>
