Mini foutje gevonden en gefixt!

--- a/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
+++ b/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
@@ -24,7 +24,7 @@
                 break;
             case 2: // InSpelState
                 <button asp-controller="Leerkracht" asp-action="DeactiveerSessie">Deactiveer</button>
-                <button asp-controller="Leerkracht" asp-action="Blokkeer">Blokkeer</button>
+                <button asp-controller="Leerkracht" asp-action="BlokkeerSessie">Blokkeer</button>
                 break;
             case 3: // GeblokkeerdState
                 <button asp-controller="Leerkracht" asp-action="DeblokkeerSessie">Deblokkeer</button>
