--- a/BreakOutBox/Views/Spel/Feedback.cshtml
+++ b/BreakOutBox/Views/Spel/Feedback.cshtml
@@ -4,7 +4,7 @@
 }
 
 @section Head {
-    <meta http-equiv="refresh" content="9">
+    <meta http-equiv="refresh" content="8">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
@@ -22,7 +22,7 @@
 }
 else
 {
-    <p>Je bent geblokkeerd. Te veel foute pogingen.</p>
+    <p>Je bent geblokkeerd.</p>
 }
 <br />
 <object height="750" type="application/pdf" data="~/algemenepdfs/Theorie.pdf"></object>
