--- a/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
+++ b/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
@@ -7,7 +7,7 @@
     <div class="col-12 col text-center">
         <h2>Sessie: @Model.Omschrijving</h2>
         <br>
-        <h4>Status: @Model.GetState().Beschrijving</h4>
+        <h4>Status: @Model.CurrentState.Beschrijving</h4>
     </div>
 </div>
 <div class="text-center margin-bottom">
