Change Groep private field _currentState to property

--- a/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
+++ b/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
@@ -57,7 +57,7 @@
                     </ul>
                 </td>
                 <td>
-                    @groep.GetState().Beschrijving
+                    @groep.CurrentState.Beschrijving
                 </td>
                 <td>
                     Vraag @(groep.Pad.getProgressie()[1] + 1) van de @groep.Pad.getProgressie()[0]
