--- a/BreakOutBox/Views/Spel/SpelSpelen.cshtml
+++ b/BreakOutBox/Views/Spel/SpelSpelen.cshtml
@@ -89,7 +89,7 @@
                     title: "Toegangscode volgende oefening",
                     text: "@Model.Opdracht.Actie.Omschrijving.ToString()",
                     type: "input",
-                    showCancelButton: true,
+                    showCancelButton: false,
                     closeOnConfirm: false,
                     animation: "slide-from-top",
                     inputPlaceholder: "Toegangscode"
